--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
             - 8000
     nginx:
         build: ./nginx
-        iamge: 622907087714.dkr.ecr.us-east-1.amazonaws.com/django_docker_aws:django_docker_aws_nginx
+        image: 622907087714.dkr.ecr.us-east-1.amazonaws.com/django_docker_aws:django_docker_aws_nginx
         volumes:
             - static_volume:/usr/src/app/static
         ports:
